p2/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: apps
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: apps
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: apps
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 5678
